# AI_Evaluation

./: .env.example  .gitignore  README.md  docker-compose.yml  run_tests.sh  start.sh
AgentForge（Agent集成框架）/: Dockerfile  docker-compose.yml  metadata.json  plan.md  pyproject.toml  run_tests.sh
AgentForge（Agent集成框架）/API_tests/: test_api.py
AgentForge（Agent集成框架）/agentforge/: __init__.py
AgentForge（Agent集成框架）/agentforge/agents/: base.py  langchain_adapter.py  native_adapter.py  openai_agents_adapter.py  registry.py
AgentForge（Agent集成框架）/agentforge/api/: http_app.py
AgentForge（Agent集成框架）/agentforge/bridge/: rl_bridge.py
AgentForge（Agent集成框架）/agentforge/core/: database.py
AgentForge（Agent集成框架）/unit_tests/: test_agents.py
mcp-bridge（MCP协议桥接）/: Dockerfile  docker-compose.yml  metadata.json  plan.md  pyproject.toml  run_tests.sh
mcp-bridge（MCP协议桥接）/API_tests/: test_api.py
mcp-bridge（MCP协议桥接）/bridge/: anthropic_mcp.py  mcp_to_openai.py  openai_to_mcp.py  schema_mapper.py
mcp-bridge（MCP协议桥接）/cli/: mcp_convert.py  mcp_inspect.py
mcp-bridge（MCP协议桥接）/client/: connection_pool.py  invocation.py  tool_discovery.py
mcp-bridge（MCP协议桥接）/governance/: access_control.py  audit_log.py  policy.yaml  rate_limiter.py  sandbox.py  tool_validator.py
mcp-bridge（MCP协议桥接）/proxy/: cache.py  intercept.py
mcp-bridge（MCP协议桥接）/server/: auth.py  handler.py  tool_registry.py
mcp-bridge（MCP协议桥接）/server/transport/: sse.py  (+3 more)
mcp-bridge（MCP协议桥接）/unit_tests/: test_bridge.py
token-core（Rust-Token引擎）/: Cargo.toml  Dockerfile  docker-compose.yml  metadata.json  plan.md  run_tests.sh
token-core（Rust-Token引擎）/API_tests/: test_api.py
token-core（Rust-Token引擎）/api/: main.py
token-core（Rust-Token引擎）/benches/: throughput.rs
token-core（Rust-Token引擎）/pyo3-bindings/: Cargo.toml
token-core（Rust-Token引擎）/src/: lib.rs
token-core（Rust-Token引擎）/unit_tests/: test_rust.py
token-core（Rust-Token引擎）/wasm-bindings/: Cargo.toml
(+140 files in other folders)
