[project]
name = "agentforge"
version = "0.1.0"
description = "Pluggable Agent Framework with Middleware Pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "pytest-cov>=6.0"]
